fix large image problem on smaller device
git-svn-id: http://svn.openfoundry.org/moztw@1613 9cc691a1-34e3-0310-a474-e8860ed5959b

--- a/events/scp0712/assets/sass/screen.scss
+++ b/events/scp0712/assets/sass/screen.scss
@@ -258,7 +258,7 @@ body{
         text-align: center;
         img{
           max-width: 100%;
-          max-height: 320px;
+          max-height: 280px;
         }
       }
       .attribution{
@@ -393,7 +393,7 @@ body{
       #mozGallery{
         .link{
           img{
-            max-height: 600px;
+            max-height: 560px;
           }
         }
       }
